{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 12,
  "lineage": "95d5cf91-c45f-c940-4d05-bf10fc138ba3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0889a44b331db0194",
            "arn": "arn:aws:ec2:us-east-1:360578367177:instance/i-05903c4b3ab1dd6f5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05903c4b3ab1dd6f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f9b5ffeda3ff5df9",
            "private_dns": "ip-10-0-1-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-54-163-160-214.compute-1.amazonaws.com",
            "public_ip": "54.163.160.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09281df93c7bfbf26",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b64c84b5c482670d",
            "tags": {
              "Name": "DevOps-CICD-Pipeline-Jenkins-Dev"
            },
            "tags_all": {
              "Name": "DevOps-CICD-Pipeline-Jenkins-Dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00dc59f2c45595346"
            ]
          },
          "dependencies": [
            "aws_security_group.dev-sg",
            "aws_subnet.dev-subnet1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360578367177:internet-gateway/igw-01a178f397ef8e05e",
            "id": "igw-01a178f397ef8e05e",
            "owner_id": "360578367177",
            "tags": {
              "Name": "DevOps-CICD-Pipeline-Igw-Dev"
            },
            "tags_all": {
              "Name": "DevOps-CICD-Pipeline-Igw-Dev"
            },
            "vpc_id": "vpc-02495df961cf4ed99"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360578367177:route-table/rtb-0b16db9998cc3f1d6",
            "id": "rtb-0b16db9998cc3f1d6",
            "owner_id": "360578367177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a178f397ef8e05e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOps-CICD-Pipeline-dev-rt-Dev"
            },
            "tags_all": {
              "Name": "DevOps-CICD-Pipeline-dev-rt-Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02495df961cf4ed99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-Igw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce285b5e2e2ec327",
            "route_table_id": "rtb-0b16db9998cc3f1d6",
            "subnet_id": "subnet-0b64c84b5c482670d"
          },
          "dependencies": [
            "aws_internet_gateway.dev-Igw",
            "aws_route_table.dev-rt",
            "aws_subnet.dev-subnet1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360578367177:security-group/sg-00dc59f2c45595346",
            "description": "inbound and outbound traffic for our project infra",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/1"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dc59f2c45595346",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Default sg for CICD Pipeline project",
            "name_prefix": "",
            "owner_id": "360578367177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps-CICD-Pipeline-SG-Dev"
            },
            "tags_all": {
              "Name": "DevOps-CICD-Pipeline-SG-Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02495df961cf4ed99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360578367177:subnet/subnet-0b64c84b5c482670d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b64c84b5c482670d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "360578367177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevOps-CICD-Pipeline-subnet1-Dev"
            },
            "tags_all": {
              "Name": "DevOps-CICD-Pipeline-subnet1-Dev"
            },
            "vpc_id": "vpc-02495df961cf4ed99"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360578367177:vpc/vpc-02495df961cf4ed99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2e78a0bead27791",
            "default_route_table_id": "rtb-05539c1232d4b66fe",
            "default_security_group_id": "sg-066d06a77f745c59a",
            "dhcp_options_id": "dopt-0d848f72eb9e8460a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02495df961cf4ed99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05539c1232d4b66fe",
            "owner_id": "360578367177",
            "tags": {
              "Name": "DevOps-CICD-Pipeline-vpc-Dev"
            },
            "tags_all": {
              "Name": "DevOps-CICD-Pipeline-vpc-Dev"
            }
          }
        }
      ]
    }
  ]
}